--- a/fakeFipkart.html
+++ b/fakeFipkart.html
@@ -61,19 +61,19 @@
         <table style="position: relative; width: 100%;">
             <tr>
                 <td><div class="img">
-                    <img src="C:\Users\Ronny\Desktop\vs coads\Box Model Staic flipkart\commputer.jpg" 
+                    <img src="commputer.jpg" 
                     alt="Computer on a desk" id="img1">
                     </div>
                     <h1 style="text-align: center; margin: 0%;">Computer Set</h1>
                 </td>
                 <td><div class="img">
-                     <img src="C:\Users\Ronny\Desktop\vs coads\Box Model Staic flipkart\Dress.jpg" 
+                     <img src="Dress.jpg" 
                      alt ="Lady spinning with her Pastal pink & sky color long floral frock" id="img2">
                      </div>
                      <h1 style="text-align: center; margin: 0%;">Dress</h1>
                 </td>
                 <td><div class="img">
-                     <img src="C:\Users\Ronny\Desktop\vs coads\Box Model Staic flipkart\headphone.jpg"
+                     <img src="headphone.jpg"
                      alt ="man wearing headphone" id="img3">
                      </div>
                      <h1 style="text-align: center; margin: 0%;">HeadSet</h1>
@@ -81,19 +81,19 @@
             </tr>
             <tr>
                 <td><div class="img">
-                    <img src="C:\Users\Ronny\Desktop\vs coads\Box Model Staic flipkart\heels.jpg" 
+                    <img src="heels.jpg" 
                     alt ="The black metel spike high heels" id="img4">
                     </div>
                     <h1 style="text-align: center; margin: 0%;">Heels</h1>
                 </td>
                 <td><div class="img">
-                    <img src="C:\Users\Ronny\Desktop\vs coads\Box Model Staic flipkart\purse.jpg" 
+                    <img src="purse.jpg" 
                     alt="Purse" id="img5">
                     </div>
                     <h1 style="text-align: center; margin: 0%;">Purse</h1>
                 </td>
                 <td><div class="img">
-                    <img src="C:\Users\Ronny\Desktop\vs coads\Box Model Staic flipkart\Red Lipstick.jpg" 
+                    <img src="Red Lipstick.jpg" 
                     alt ="Red LipStick" id="img6">
                     </div>
                     <h1 style="text-align: center; margin: 0%;">Red LipStick</h1>
